--- a/src/index.html
+++ b/src/index.html
@@ -6,7 +6,8 @@
   <title>webpack starterkit</title>
 </head>
 <body>
-  <h1>webpack starter</h1>
-  <p>✨ A lightweight foundation for your next webpack based frontend project.</p>
+  <div id="map">
+
+  </div>
 </body>
 </html>
