Added draggable window to the map with the 5 nearest dog toilets. Optimized some functions. Added styling & reformatted some comments

--- a/src/index.html
+++ b/src/index.html
@@ -4,14 +4,26 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>webpack starterkit</title>
+
+  <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
-  <div id="map">
+
+<div id="locations">
+  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+  <div id="mydivheader"><h2>Meest nabije</h2></div>
+  <div id="locationInfo">
 
   </div>
 
-  <div id="locations">
+</div>
 
-  </div>
+<div id="map">
+  <!-- Draggable DIV -->
+</div>
+
+
+
+
 </body>
 </html>
