Made the function to drag an element generic & put in a separate js file. Fixed the body resizing when the window gets dragged beyond the body bounds. Added a parent div for all the HTML markup inside the body

--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,19 @@
   <link href="https://fonts.googleapis.com/css?family=Pacifico&display=swap" rel="stylesheet">
 </head>
 <body>
+<div class="full">
+  <div id="locations">
+    <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
+    <div id="mydivheader"><h2>Meest nabije</h2></div>
+    <div id="locationInfo">
 
-<div id="locations">
-  <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-  <div id="mydivheader"><h2>Meest nabije</h2></div>
-  <div id="locationInfo">
+    </div>
 
   </div>
 
+  <div id="map">
+    <!-- Draggable DIV -->
+  </div>
 </div>
-
-<div id="map">
-  <!-- Draggable DIV -->
-</div>
-
-
-
-
 </body>
 </html>
