The draggable window is now only draggable by its header

--- a/src/index.html
+++ b/src/index.html
@@ -10,8 +10,9 @@
 <body>
 <div class="full">
   <div id="locations">
-    <!-- Include a header DIV with the same name as the draggable DIV, followed by "header" -->
-    <div id="mydivheader"><h2>Meest nabije</h2></div>
+    <div id="locationsheader">
+      <h2>Meest nabije</h2>
+    </div>
     <div id="locationInfo">
 
     </div>
@@ -19,7 +20,6 @@
   </div>
 
   <div id="map">
-    <!-- Draggable DIV -->
   </div>
 </div>
 </body>
